corrected warnings